--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.6",
-    "@angular/common": "^14.2.6",
-    "@angular/compiler": "^14.2.6",
-    "@angular/core": "^14.2.6",
-    "@angular/forms": "^14.2.6",
-    "@angular/platform-browser": "^14.2.6",
-    "@angular/platform-browser-dynamic": "^14.2.6",
-    "@angular/router": "^14.2.6",
-    "@primer/css": "^20.4.3",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "14.2.10",
+    "@angular/common": "14.2.10",
+    "@angular/compiler": "14.2.10",
+    "@angular/core": "14.2.10",
+    "@angular/forms": "14.2.10",
+    "@angular/platform-browser": "14.2.10",
+    "@angular/platform-browser-dynamic": "14.2.10",
+    "@angular/router": "14.2.10",
+    "@primer/css": "20.5.1",
+    "rxjs": "7.5.7",
+    "tslib": "2.4.1",
+    "zone.js": "0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.6",
-    "@angular/cli": "~14.2.6",
-    "@angular/compiler-cli": "^14.2.6",
-    "typescript": "~4.7.2"
+    "@angular-devkit/build-angular": "14.2.9",
+    "@angular/cli": "14.2.9",
+    "@angular/compiler-cli": "14.2.10",
+    "typescript": "4.8.4"
   }
 }
