--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "bento",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development"
+    "build": "ng build"
   },
   "private": true,
   "dependencies": {
