--- a/package.json
+++ b/package.json
@@ -7,23 +7,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.2.10",
-    "@angular/common": "14.2.10",
-    "@angular/compiler": "14.2.10",
-    "@angular/core": "14.2.10",
-    "@angular/forms": "14.2.10",
-    "@angular/platform-browser": "14.2.10",
-    "@angular/platform-browser-dynamic": "14.2.10",
-    "@angular/router": "14.2.10",
+    "@angular/animations": "15.0.4",
+    "@angular/common": "15.0.4",
+    "@angular/compiler": "15.0.4",
+    "@angular/core": "15.0.4",
+    "@angular/forms": "15.0.4",
+    "@angular/platform-browser": "15.0.4",
+    "@angular/platform-browser-dynamic": "15.0.4",
+    "@angular/router": "15.0.4",
+    "@ngrx/component": "15.1.0",
     "@primer/css": "20.5.1",
-    "rxjs": "7.5.7",
-    "tslib": "2.4.1",
-    "zone.js": "0.12.0"
+    "rxjs": "7.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.9",
-    "@angular/cli": "14.2.9",
-    "@angular/compiler-cli": "14.2.10",
+    "@angular-devkit/build-angular": "15.0.4",
+    "@angular/cli": "15.0.4",
+    "@angular/compiler-cli": "15.0.4",
     "typescript": "4.8.4"
   }
 }
