--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.0.4",
-    "@angular/common": "15.0.4",
-    "@angular/compiler": "15.0.4",
-    "@angular/core": "15.0.4",
-    "@angular/forms": "15.0.4",
-    "@angular/platform-browser": "15.0.4",
-    "@angular/platform-browser-dynamic": "15.0.4",
-    "@angular/router": "15.0.4",
-    "@ngrx/component": "15.1.0",
-    "@primer/css": "20.5.1",
-    "rxjs": "7.8.0"
+    "@angular/animations": "16.0.0",
+    "@angular/common": "16.0.0",
+    "@angular/compiler": "16.0.0",
+    "@angular/core": "16.0.0",
+    "@angular/forms": "16.0.0",
+    "@angular/platform-browser": "16.0.0",
+    "@angular/platform-browser-dynamic": "16.0.0",
+    "@angular/router": "16.0.0",
+    "@ngrx/component": "16.0.0-beta.0",
+    "@primer/css": "20.8.3",
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.0.4",
-    "@angular/cli": "15.0.4",
-    "@angular/compiler-cli": "15.0.4",
-    "typescript": "4.8.4"
+    "@angular-devkit/build-angular": "16.0.0",
+    "@angular/cli": "16.0.0",
+    "@angular/compiler-cli": "16.0.0",
+    "typescript": "4.9.5"
   }
 }
